# BricksDSP

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate
benchmark/: CMakeLists.txt
benchmark/bricks_benchmark/: benchmark_main.cpp  fixture.h
examples/: CMakeLists.txt  fixture.cpp  jack_fixture.cpp  synth_voice.cpp
include/: bricks.h  dsp_brick.h  envelope_bricks.h  filter_bricks.h  modulator_bricks.h  oscillator_bricks.h  utility_bricks.h  utils.h
include/bricks_dsp/: aligned_array.h  analyzer_bricks.h  bricks.h  dsp_brick.h  envelope_bricks.h  expiring_queue.h  filter_bricks.h  modulator_bricks.h  oscillator_bricks.h  random_device.h  utility_bricks.h  utils.h
src/: aligned_array.h  dsp_brick.h  envelope_bricks.cpp  envelope_bricks.h  filter_bricks.cpp  main.cpp  modulator_bricks.cpp  oscillator_bricks.cpp  oscillator_bricks.h  random_device.cpp  utility_bricks.h  utils.h
src/data/: wavetables_x4.h
test/: CMakeLists.txt
test/unittests/: analyzer_bricks_test.cpp  envelope_bricks_test.cpp  filter_brick_test.cpp  modulator_bricks_test.cpp  oscillator_bricks_test.cpp  test_utils.cpp  test_utils.h  utilities_test.cpp  utility_bricks_test.cpp
tools/: waveform_gen.py
